# crypto_ws

./: pyproject.toml  requirements.txt
crypto_ws/: binance_ws.py  bybit_ws.py  client_ws.py  core_ws.py  huobi_ws.py  kraken_ws.py  utils.py
examples/: example_binance.py  example_huobi.py
tests/: test_corews.py
